alterações necessarias para rodar a API com o Front
