# src/route/usuario.routes.js
@@ -1,8 +1,7 @@
 const { Router } = require('express');
 const Usuario = require('../models/Usuario');
-const { auth } = require('../middleware/auth');
+const { auth } = require('../middleware/auth'); // Certifique-se de que auth está definido corretamente
 const Local = require('../models/Local');
-
 
 const usuarioRoutes = Router();
 
@@ -15,74 +14,21 @@ function validarCPF(cpf) {
 }
 
 usuarioRoutes.post('/', async (req, res) => {
-    /*
-         #swagger.tags = ['Usuario'],
-         #swagger.parameters = ['body'] ={
-           in: 'body',
-           description:'Cadastra novos usuários!',
-           schema: {
-            $nome: 'Taline Araujo',
-            $email: 'taline.araujo@hotmail.com',
-            $cpf: '02602502789',
-            sexo: 'Feminino',
-            $senha: 'teste123',
-            $data_nascimento: '1996-04-03',
-            endereco: 'Vargem pequena' 
-        }   
-    }
-    */ 
     try {
-        const {
-            nome,
-            email,
-            cpf,
-            sexo,
-            senha,
-            data_nascimento,
-            endereco
-        } = req.body;
+        const { nome, email, cpf, sexo, senha, data_nascimento, endereco } = req.body;
 
-        
-
-        if (!nome) {
-            return res.status(400).json({ message: 'O nome é obrigatório' });
-        }
-
-        if (!senha) {
-            return res.status(400).json({ message: 'A senha é obrigatório' });
-        }
-
-        if (!email) {
-            return res.status(400).json({ message: 'O email é obrigatório' });
-        }
+        if (!nome) return res.status(400).json({ message: 'O nome é obrigatório' });
+        if (!senha) return res.status(400).json({ message: 'A senha é obrigatória' });
+        if (!email) return res.status(400).json({ message: 'O email é obrigatório' });
 
         const usuarioCadastrado = await Usuario.findOne({ where: { email } });
-        if (usuarioCadastrado) {
-            return res.status(400).json({ error: true, message: 'Email já cadastrado!' });
-        }
+        if (usuarioCadastrado) return res.status(400).json({ error: true, message: 'Email já cadastrado!' });
 
-        if (!cpf || !validarCPF(cpf)) {
-            return res.status(400).json({ message: 'CPF inválido' });
-        }
+        if (!cpf || !validarCPF(cpf)) return res.status(400).json({ message: 'CPF inválido' });
+        if (!data_nascimento) return res.status(400).json({ message: 'A data de nascimento é obrigatória' });
+        if (!data_nascimento.match(/\d{4}-\d{2}-\d{2}/)) return res.status(400).json({ message: 'A data de nascimento não está no formato correto' });
 
-        if (!data_nascimento) {
-            return res.status(400).json({ message: 'A data de nascimento é obrigatória' });
-        }
-        if (!data_nascimento.match(/\d{4}-\d{2}-\d{2}/)) {
-            return res.status(400).json({ message: 'A data de nascimento não está no formato correto' });
-        }
-
-        const usuario = await Usuario.create({
-            nome:nome,
-            email:email,
-            cpf:cpf,
-            sexo:sexo,
-            senha: senha,
-            data_nascimento:data_nascimento,
-            endereco:endereco
-        });
-
-        
+        const usuario = await Usuario.create({ nome, email, cpf, sexo, senha, data_nascimento, endereco });
 
         res.status(201).json(usuario);
     } catch (error) {
@@ -92,71 +38,38 @@ usuarioRoutes.post('/', async (req, res) => {
 });
 
 usuarioRoutes.get('/:id', auth, async (req, res) => {
-      /*
-        #swagger.tags = ['Usuarios'],  
-        #swagger.parameters['ID'] = {
-            in: 'query',
-            description: 'Filtrar usuario pelo ID',
-            type: 'string'
-    }
-    
-    */
-
-    try{
-        const {id} = req.params;
+    try {
+        const { id } = req.params;
         const usuario = await Usuario.findByPk(id);
-        if (!usuario){
-            return res.status(404).json({ error: 'Usuário não encontrado!'});
-        }
+        if (!usuario) return res.status(404).json({ error: 'Usuário não encontrado!' });
 
         res.json(usuario);
-    }catch (error){
-        console.error (error.massage);
-        res.status(500).json({ error: "erro ao buscar usuario"});
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).json({ error: 'Erro ao buscar usuário' });
     }
-
 });
 
-usuarioRoutes.get('/', auth, async (req, res) =>{
-   /*   #swagger.tags = ['Usuario'],  
-        #swagger.parameters['Usuario'] = {
-            in: 'query',
-            description: 'Buscar todos os usuarios',
-            type: 'string'
-    } 
-    */
-          try{
-              const usuario = await Usuario.findAll();
-          res.json(usuario);
-          }catch(error){
-              console.error(error.massage);
-              res.status(500).json({ error: 'Erro ao buscar usuarios'})
-          }
-          
-      
-});
-usuarioRoutes.delete('/:id', auth, async (req, res) => {
-    /*  #swagger.tags = ['Usuario'],  
-        #swagger.parameters['Usuario_id'] = {
-            in: 'query',
-            description: 'Excluir usuario',
-            type: 'string'
-    } 
-    */
+usuarioRoutes.get('/', auth, async (req, res) => {
     try {
-        const  {id} = req.params;
-        const enderecoUsuario = await Local.findOne({ where: { usuarioId: id } });
+        const usuarios = await Usuario.findAll();
+        res.json(usuarios);
+    } catch (error) {
+        console.error(error.message);
+        res.status(500).json({ error: 'Erro ao buscar usuários' });
+    }
+});
 
-        if (enderecoUsuario) {
-            return res.status(400).json({ error: true, message: 'Este usuário não pode ser excluído pois possui endereços cadastrados.' });
-        }
+usuarioRoutes.delete('/:id', auth, async (req, res) => {
+    try {
+        const { id } = req.params;
+        const enderecoUsuario = await Local.findOne({ where: { usuario_Id: id } });
 
-        
+        if (enderecoUsuario) return res.status(400).json({ error: true, message: 'Este usuário não pode ser excluído pois possui endereços cadastrados.' });
+
         const usuarioExcluido = await Usuario.destroy({ where: { id } });
 
-        if (!usuarioExcluido) {
-            return res.status(404).json({ error: true, message: 'Usuário não encontrado.' });
-        }
+        if (!usuarioExcluido) return res.status(404).json({ error: true, message: 'Usuário não encontrado.' });
 
         res.json({ message: 'Usuário excluído com sucesso.' });
     } catch (error) {
@@ -165,6 +78,6 @@ usuarioRoutes.delete('/:id', auth, async (req, res) => {
     }
 });
 
+module.exports = usuarioRoutes;
 
 
-module.exports = usuarioRoutes 
